--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,19 @@
-[project]
-name = "tiktok_pull"
+[tool.poetry]
+name = "tiktok-pull"
 version = "0.1.0"
-description = ""
-authors = [
-    {name = "Joseph Bochinski",email = "stirgejr@gmail.com"}
-]
+description = "Pull user data from TikTok"
+authors = ["Joseph Bochinski <stirgejr@gmail.com>"]
+license = "GPL3"
 readme = "README.md"
-requires-python = ">=3.13"
-dependencies = [
-    "tqdm (>=4.67.1,<5.0.0)"
-]
+
+[tool.poetry.dependencies]
+python = ">=3.12,<3.14"
+tqdm = "^4.67.1"
+requests = "^2.32.3"
+pyinstaller = "^6.11.1"
+nanoid = "^2.0.0"
 
 
 [build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
